--- a/reports.html
+++ b/reports.html
@@ -208,7 +208,7 @@ tr:last-child td {
 <hr />
 
 <div class="actions-box">
-  <button onclick="downloadPDF()">⬇️ Download Report Form(s)(Recommended)</button>
+  <button onclick="downloadPDF()">⬇️ Download Report Form(s)<br>Recommended</button>
   <button onclick="downloadDetailedPDF()">⬇️ Download Detailed Report</button>
 </div>
 
