--- a/reports.html
+++ b/reports.html
@@ -208,8 +208,15 @@ tr:last-child td {
 <hr />
 
 <div class="actions-box">
-  <button onclick="downloadPDF()">⬇️ Download Report Form(s)<br>Recommended</button>
-  <button onclick="downloadDetailedPDF()">⬇️ Download Detailed Report</button>
+  <button onclick="downloadPDF()">
+    ⬇️ Download Summary Report<br>
+    <small>Recommended for parents & learners</small>
+  </button>
+
+  <button onclick="downloadDetailedPDF()">
+    ⬇️ Download Detailed Assessment Report<br>
+    <small>For teachers & internal review</small>
+  </button>
 </div>
 
   
