--- a/trialresults.html
+++ b/trialresults.html
@@ -17,6 +17,13 @@ body {
   line-height: 1.5;
 }
 
+
+* {
+  max-width: 100%;
+}
+
+
+  
 h2, h3 {
   margin-bottom: 6px;
 }
@@ -51,6 +58,21 @@ h5 {
   color: #555;
 }
 
+
+/* ===== HEADER TYPOGRAPHY ===== */
+.learner-header h4 {
+  font-size: 22px;
+  font-weight: 800;
+  margin: 0;
+}
+
+.learner-header small {
+  font-size: 14px;
+  font-weight: 600;
+}
+
+
+  
 .summary-box {
   background: #f3f6fa;
   border-left: 5px solid #3498db;
@@ -80,7 +102,9 @@ table {
   border-collapse: collapse;
   width: 100%;
   margin-top: 6px;
-  font-size: 0.85em;
+  font-size: 14px;
+  table-layout: fixed;
+  word-break: break-word;
 }
 
 th, td {
@@ -93,6 +117,12 @@ th {
   text-align: left;
 }
 
+th {
+  font-size: 14px;
+  font-weight: 700;
+}
+
+  
 tr:last-child td {
   border-bottom: none;
 }
@@ -124,26 +154,30 @@ tr:last-child td {
 
 /* ===== A4 PAGE CANVAS ===== */
 .a4-page {
-  width: 210mm;
-  height: 297mm;
+  width: 186mm;        /* 210 - margins */
+  min-height: 267mm;   /* 297 - margins */
 
-  padding: 15mm 12mm;
-  box-sizing: border-box;
+  padding: 0;
+  margin: 0 auto 10px auto;
 
   background: white;
-  margin: 0 auto 12px auto;
-
+  box-sizing: border-box;
   overflow: visible; /* allow content measurement */
 }
 
 
-.a4-page {
-  overflow: visible;
-}
 
 .report-overview h3 {
   font-size: 1.1em;
   line-height: 1.2em;
+}
+
+
+
+.report-overview h3 {
+  font-size: 24px;
+  font-weight: 800;
+  letter-spacing: 0.3px;
 }
 
   
@@ -173,10 +207,16 @@ tr:last-child td {
 <p id="status"></p>
 <hr />
 
-
 <div class="actions-box">
+  <button onclick="downloadPDF()">
+    ⬇️ Download Summary Report<br>
+    <small>Recommended for parents & learners</small>
+  </button>
 
-  <button onclick="downloadPDF()">⬇️ Download PDF</button>
+  <button onclick="downloadDetailedPDF()">
+    ⬇️ Download Detailed Assessment Report<br>
+    <small>For teachers & internal review</small>
+  </button>
 </div>
 
   
@@ -1027,111 +1067,265 @@ function getTrend(currentAvg, previousAvg) {
 }
 
 
-
-
-
-
-
-  
 window.downloadPDF = async function () {
- 
   if (!reportDiv.innerHTML.trim()) {
     alert("No report to download");
     return;
   }
 
   const term = termSelect.options[termSelect.selectedIndex]?.text || "Term";
-  const mode = viewMode.value;
+  const filename = `Summary_Report_${term}_${SYSTEM_YEAR}.pdf`;
 
-  let filename = `Report_${term}_${SYSTEM_YEAR}.pdf`;
-  if (mode === "student") filename = `Student_Report_${term}_${SYSTEM_YEAR}.pdf`;
-  if (mode === "subject") filename = `Subject_Report_${term}_${SYSTEM_YEAR}.pdf`;
-
+  // Clone the report for clean PDF rendering
   const clone = reportDiv.cloneNode(true);
 
-  // ===== REMOVE DETAILED TABLES =====
-  clone.querySelectorAll(".subject-block table, .split-block.recommendations, .split-block.subject-block").forEach(el => {
-    // Keep only subject average row if exists
-    const tfoot = el.querySelector("tfoot");
-    if (tfoot) el.replaceWith(tfoot); // replace table with only average row
-    else el.remove();
-  });
+  // ===== FORCE CLEAN A4 LAYOUT =====
+  clone.style.width = "190mm";
+  clone.style.margin = "0 auto";
+  clone.style.padding = "0";
+  clone.style.boxSizing = "border-box";
 
-  // Remove on-screen trend boxes
-  clone.querySelectorAll(".trend-box").forEach(el => el.remove());
+  // ===== REMOVE DETAILED CONTENT =====
+  clone.querySelectorAll(".subject-block, .trend-box").forEach(el => el.remove());
 
-  // ===== INSERT SMALL COMBINED CHARTS =====
   const cards = clone.querySelectorAll(".learner-card");
-  for (const card of cards) {
-    const studentName = card.querySelector("h4")?.innerText.split("👤")[1]?.split("(Adm")[0]?.trim();
-    const admission = card.querySelector("h4")?.innerText.match(/\(Adm: (\d+)\)/)?.[1];
-    if (!admission) continue;
 
-    // Gather all subjects for this student
-    const subjects = Object.keys(avgMap?.[studentName] || {});
-    if (!subjects.length) continue;
+  cards.forEach(card => {
+    card.style.margin = "0";
+    card.style.padding = "0";
+    card.style.boxSizing = "border-box";
 
-    // Collect scores for each subject
-    const datasets = subjects.map(subj => {
-      const score = avgMap[studentName][subj]?.average_score ?? 0;
-      return {
-        label: subj,
-        data: [score], // only one term in download
-        borderColor: getRandomColor(subj),
-        backgroundColor: "transparent",
-        tension: 0.2,
-        pointRadius: 3
-      };
-    });
+    const header = card.querySelector(".learner-header");
+    if (header) {
+      header.style.marginTop = "0";
+      header.style.paddingTop = "0";
+      header.style.fontSize = "18px";
+      header.style.fontWeight = "700";
+    }
 
-    const canvas = document.createElement("canvas");
-    canvas.width = 300;  // small width
-    canvas.height = 120; // small height
-    card.appendChild(canvas);
+    // Get student name
+    const studentName = card.querySelector("h4")?.innerText
+      .replace("👤", "")
+      .replace(/\(.*?\)/, "")
+      .trim();
 
-    new Chart(canvas, {
-      type: "line",
-      data: {
-        labels: ["Current Term"],
-        datasets: datasets
-      },
-      options: {
-        responsive: false,
-        maintainAspectRatio: false,
-        plugins: {
-          legend: { position: "bottom", labels: { font: { size: 8 } } }
-        },
-        scales: {
-          y: { min: 1, max: 4, ticks: { stepSize: 1 } }
-        }
-      }
-    });
+    const subjectData = avgMap?.[studentName];
+    if (!subjectData) return;
+
+    // ===== CALCULATE OVERALL AVERAGE =====
+    const subjectScores = Object.values(subjectData).map(d => Number(d.average_score));
+    const overallAvg = subjectScores.length
+      ? subjectScores.reduce((a, b) => a + b, 0) / subjectScores.length
+      : 0;
+
+    // ===== EXTRACT TREND, STRENGTHS & NEEDS =====
+   // ===== EXTRACT TREND, STRENGTHS & NEEDS (NO REPETITION) =====
+let trendText = "";
+let strengthsText = "";
+let needsText = "";
+
+// Only take the first matching <p> for trend
+const trendP = card.querySelector(".split-block p");
+if (trendP) {
+  trendText = trendP.innerText.replace(/^📊 Progress Trend:.*$/m, "").trim();
+}
+
+// Only take the first matching strong element for strengths and needs
+const strongElems = card.querySelectorAll(".split-block p strong");
+strongElems.forEach(el => {
+  const text = el.innerText;
+  const parentText = el.parentNode?.innerText || "";
+  if (!strengthsText && text.includes("💪 Strengths")) {
+    strengthsText = parentText.replace("💪 Strengths:", "").trim();
+  } else if (!needsText && text.includes("🎯 Areas for Improvement")) {
+    needsText = parentText.replace("🎯 Areas for Improvement:", "").trim();
   }
+});
 
-  // ===== PDF OPTIONS =====
-  const opt = {
-    margin: 10,
+
+    strengthsText = strengthsText.replace(/Life Skills, English, Kiswahili/g, "").trim();
+
+    // ===== SUMMARY BLOCK =====
+    const summaryBlock = document.createElement("div");
+    summaryBlock.style.marginBottom = "6px";
+    summaryBlock.style.fontSize = "11px";
+    summaryBlock.innerHTML = `
+    
+      ${strengthsText ? `<p style="margin:2px 0;">💪 Strengths: ${strengthsText}</p>` : ""}
+     
+    `;
+
+    // ===== HELPER FUNCTIONS =====
+    function overallLevel(score) {
+      if (score >= 3.5) return "Exceeding Expectations";
+      if (score >= 2.5) return "Meeting Expectations";
+      if (score >= 1.5) return "Approaching Expectations";
+      return "Below Expectations";
+    }
+
+    function generalComment(score) {
+      if (score >= 3.5) return "Excellent performance. Keep it up.";
+      if (score >= 2.5) return "Good progress. Continue working hard.";
+      if (score >= 1.5) return "Fair work. Aim higher next term.";
+      return "Needs more effort and support.";
+    }
+
+    function commentFromScore(score) {
+      if (score >= 3.5) return "Excellent work";
+      if (score >= 2.5) return "Good progress";
+      if (score >= 1.5) return "Fair work";
+      return "Put more effort";
+    }
+
+    // ===== SUBJECT TABLE =====
+    const table = document.createElement("table");
+    table.style.width = "100%";
+    table.style.borderCollapse = "collapse";
+    table.style.marginTop = "6px";
+    table.style.fontSize = "12px";
+    table.style.tableLayout = "fixed";
+
+    table.innerHTML = `
+      <thead>
+        <tr>
+          <th style="border:1px solid #000;padding:6px;width:30%;">Learning Area</th>
+          <th style="border:1px solid #000;padding:6px;width:15%;">Score</th>
+          <th style="border:1px solid #000;padding:6px;width:25%;">Performance Level</th>
+          <th style="border:1px solid #000;padding:6px;width:30%;">Teacher Comment</th>
+        </tr>
+      </thead>
+      <tbody>
+        ${Object.entries(subjectData).map(([subject, d]) => {
+          const avg = Number(d.average_score);
+          return `
+            <tr>
+              <td style="border:1px solid #000;padding:6px;">${subject}</td>
+              <td style="border:1px solid #000;padding:6px;text-align:center;">${avg.toFixed(2)}</td>
+              <td style="border:1px solid #000;padding:6px;">${d.achievement_level}</td>
+              <td style="border:1px solid #000;padding:6px;">${commentFromScore(avg)}</td>
+            </tr>
+          `;
+        }).join("")}
+      </tbody>
+    `;
+
+    // ===== GENERAL PERFORMANCE BLOCK =====
+    const generalBlock = document.createElement("div");
+    generalBlock.style.marginTop = "10px";
+    generalBlock.style.fontSize = "12px";
+
+    generalBlock.innerHTML = `
+      <table style="width:100%;border-collapse:collapse;margin-top:6px;">
+        <tr>
+          <td style="border:1px solid #000;padding:6px;width:40%;">
+            <strong>Learner's General Performance Level</strong>
+          </td>
+          <td style="border:1px solid #000;padding:6px;">
+            ${overallAvg.toFixed(2)} — ${overallLevel(overallAvg)}
+          </td>
+        </tr>
+        <tr>
+          <td style="border:1px solid #000;padding:6px;">
+            <strong>Teacher's General Comment</strong>
+          </td>
+          <td style="border:1px solid #000;padding:12px;">
+            ${generalComment(overallAvg)}
+          </td>
+        </tr>
+      </table>
+
+      <div style="margin-top:12px;">
+        <div style="display:flex;justify-content:space-between;margin-top:14px;">
+          <div>Closing Date: ____________________</div>
+          <div>Opening Date: ____________________</div>
+        </div>
+
+        <div style="display:flex;justify-content:space-between;margin-top:18px;">
+          <div>Class Teacher Signature: ____________________</div>
+          <div>Head of Institution Signature: ____________________</div>
+        </div>
+      </div>
+    `;
+
+    // ===== FORCE SECOND PAGE FOR TABLE + GENERAL BLOCK =====
+    // ===== GENERAL PERFORMANCE BLOCK + TABLE ON SECOND PAGE =====
+const secondPageContainer = document.createElement("div");
+secondPageContainer.style.pageBreakBefore = "always"; // force page 2
+
+// Increase font size and add row padding
+table.style.fontSize = "16px";
+table.querySelectorAll("td, th").forEach(cell => {
+  cell.style.padding = "10px 6px"; // taller rows
+});
+
+generalBlock.style.fontSize = "16px";
+generalBlock.style.lineHeight = "2"; // better spacing for text
+
+// Append to container
+secondPageContainer.appendChild(table);
+secondPageContainer.appendChild(generalBlock);
+
+// ===== APPEND ELEMENTS =====
+card.appendChild(summaryBlock);           // page 1
+card.appendChild(secondPageContainer);    // page 2
+ });
+  // ===== EXPORT PDF =====
+  html2pdf().set({
+    margin: [10, 10, 10, 10],
     filename,
     image: { type: "jpeg", quality: 0.98 },
-    html2canvas: { scale: 2, useCORS: true },
+    html2canvas: { scale: 2, scrollY: 0, useCORS: true },
     jsPDF: { unit: "mm", format: "a4", orientation: "portrait" }
-  };
-
-  html2pdf().set(opt).from(clone).save();
+  }).from(clone).save();
 };
 
-// ===== HELPER: RANDOM COLOR PER SUBJECT =====
-function getRandomColor(seed) {
-  // consistent color per subject
-  let hash = 0;
-  for (let i = 0; i < seed.length; i++) hash = seed.charCodeAt(i) + ((hash << 5) - hash);
-  const c = (hash & 0x00FFFFFF).toString(16).toUpperCase();
-  return "#" + "00000".substring(0, 6 - c.length) + c;
-}
+
+
+
+window.downloadDetailedPDF = async function () {
+  if (!reportDiv.innerHTML.trim()) {
+    alert("No report to download");
+    return;
+  }
+
+  const term = termSelect.options[termSelect.selectedIndex]?.text || "Term";
+  const filename = `Detailed_Report_${term}_${SYSTEM_YEAR}.pdf`;
+
+  // Clone the report div for clean PDF export
+  const clone = reportDiv.cloneNode(true);
+
+  // Force A4 layout
+  clone.style.width = "190mm";
+  clone.style.margin = "0 auto";
+  clone.style.padding = "0";
+  clone.style.boxSizing = "border-box";
+
+  // Keep everything visible — no removals
+  // Just increase charts and table clarity if needed
+  clone.querySelectorAll("canvas").forEach(c => {
+    c.style.width = "100%";
+    c.style.height = "200px";
+  });
+
+  // Optional: increase table font size for clarity
+  clone.querySelectorAll("table").forEach(table => {
+    table.style.fontSize = "14px";
+    table.querySelectorAll("td, th").forEach(cell => {
+      cell.style.padding = "8px";
+    });
+  });
+
+  html2pdf().set({
+    margin: [10, 10, 10, 10],
+    filename,
+    image: { type: "jpeg", quality: 0.98 },
+    html2canvas: { scale: 2, scrollY: 0, useCORS: true },
+    jsPDF: { unit: "mm", format: "a4", orientation: "portrait" }
+  }).from(clone).save();
+};
+
 
   
 </script>
-
-
 </body>
 </html>
