--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -1439,11 +1439,16 @@ let trendText = "";
 let strengthsText = "";
 let needsText = "";
 
-// Only take the first matching <p> for trend
-const trendP = card.querySelector(".split-block p");
-if (trendP) {
-  trendText = trendP.innerText.replace(/^📊 Progress Trend:.*$/m, "").trim();
+// Find the exact trend paragraph
+const trendElement = Array.from(card.querySelectorAll("p"))
+  .find(p => p.innerText.includes("📊 Progress Trend"));
+
+if (trendElement) {
+  trendText = trendElement.innerText
+    .replace("📊 Progress Trend:", "")
+    .trim();
 }
+
 
 // Only take the first matching strong element for strengths and needs
 const strongElems = card.querySelectorAll(".split-block p strong");
@@ -1466,7 +1471,11 @@ strongElems.forEach(el => {
     summaryBlock.style.fontSize = "11px";
     summaryBlock.innerHTML = `
     
-      ${strengthsText ? `<p style="margin:2px 0;">💪 Strengths: ${strengthsText}</p>` : ""}
+     summaryBlock.innerHTML = `
+  ${trendText ? `<p style="margin:2px 0;"><strong>📊 Progress:</strong> ${trendText}</p>` : ""}
+  ${strengthsText ? `<p style="margin:2px 0;"><strong>💪 Strengths:</strong> ${strengthsText}</p>` : ""}
+`;
+
      
     `;
 
