--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -1415,7 +1415,7 @@ cards.forEach(card => {
   footer.style.paddingTop = "6px";
   footer.style.pageBreakInside = "avoid";
   footer.innerText =
-    "Assessment is competency-based and evidence-driven, guided by KICD CBC curriculum designs.";
+    "Assessment is competency-based and evidence-driven, guided by KICD CBE curriculum designs.";
 
   // ===== STUDENT NAME =====
   const studentName = card.querySelector("h4")?.innerText
