--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -672,7 +672,7 @@ ${intelligence.schoolImprovement !== null ? `
       </table>
 
       <!-- 2️⃣ SUBJECT ANALYSIS -->
-      <h4 style="margin-top:20px;">2️⃣ Subject Mean Analysis</h4>
+      <h4 style="margin-top:20px;">2️⃣ Subject/Subject Area Mean Analysis</h4>
       <table>
         <thead>
           <tr>
@@ -856,7 +856,7 @@ function renderGrouped(grouped, avgMap){
           ${subjectAvg !== null ? `
           <tfoot>
             <tr style="font-weight:bold; background:#f0f0f0;">
-              <td>SUBJECT AVERAGE</td>
+              <td>SUBJECT/LEARNING AREA AVERAGE</td>
               <td colspan="2">
                 <span style="
                   padding: 3px 8px;
@@ -1520,7 +1520,7 @@ strongElems.forEach(el => {
     table.innerHTML = `
       <thead>
         <tr>
-          <th style="border:1px solid #000;padding:6px;width:30%;">Learning Area</th>
+          <th style="border:1px solid #000;padding:6px;width:30%;">Learning Area/Subject</th>
           <th style="border:1px solid #000;padding:6px;width:15%;">Score</th>
           <th style="border:1px solid #000;padding:6px;width:25%;">Performance Level</th>
           <th style="border:1px solid #000;padding:6px;width:30%;">Teacher Comment</th>
