--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -687,7 +687,7 @@ ${intelligence.schoolImprovement !== null ? `
       </table>
 
       <!-- 2️⃣ SUBJECT ANALYSIS -->
-      <h4 style="margin-top:20px;">2️⃣ Subject/Subject Area Mean Analysis</h4>
+      <h4 style="margin-top:20px;">2️⃣ Subject/Learning Area Mean Analysis</h4>
       <table>
         <thead>
           <tr>
